--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     },
     "allowSyntheticDefaultImports": true
   },
-  "include": ["mock/**/*", "src/**/*", "config/**/*", ".umirc.ts", "typings.d.ts"],
+  "include": ["mock/**/*", "src/**/*", "config/**/*", "typings.d.ts"],
   "exclude": ["node_modules", "lib", "es", "dist", "typings", "**/__test__", "test", "docs", "tests"]
 }
